tests/__snapshots__/validation-toAcceptProps-stderr.snap.txt
Error: An argument for 'source' or type argument for 'Source' must be provided.

  3 | describe("argument for 'source'", () => {
  4 |   test("must be provided", () => {
  5 |     expect().type.toAcceptProps({ test: false });
    |     ~~~~~~
  6 |   });
  7 | 
  8 |   test("must be of a function or class type", () => {

      at ./__typetests__/toAcceptProps.tst.tsx:5:5

Error: An argument for 'source' must be of a function or class type.

   7 | 
   8 |   test("must be of a function or class type", () => {
   9 |     expect({ a: "sample" }).type.toAcceptProps({ test: false });
     |            ~~~~~~~~~~~~~~~
  10 |   });
  11 | });
  12 | 

       at ./__typetests__/toAcceptProps.tst.tsx:9:12

Error: The type argument must be of a function or class type.

  13 | describe("type argument for 'Source'", () => {
  14 |   test("must be of a function or class type", () => {
  15 |     expect<{ a: string }>().type.not.toAcceptProps({});
     |            ~~~~~~~~~~~~~
  16 |   });
  17 | });
  18 | 

       at ./__typetests__/toAcceptProps.tst.tsx:15:12

Error: An argument for 'target' or type argument for 'Target' must be provided.

  20 |   test("must be provided", () => {
  21 |     // @ts-expect-error!
  22 |     expect(() => <>{"test"}</>).type.toAcceptProps();
     |                                      ~~~~~~~~~~~~~
  23 |   });
  24 | 
  25 |   test("must be of object type", () => {

       at ./__typetests__/toAcceptProps.tst.tsx:22:38

Error: An argument for 'props' must be of an object type.

  25 |   test("must be of object type", () => {
  26 |     // @ts-expect-error!
  27 |     expect(() => <>{"test"}</>).type.toAcceptProps("nope");
     |                                                    ~~~~~~
  28 |   });
  29 | });
  30 | 

       at ./__typetests__/toAcceptProps.tst.tsx:27:52

